2010-01-14  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #4715: List what element are of INT type. (Thanks to Mads Jensen)

2010-01-14  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: tx_ncstaticfilecache::processDirtyPages() removes entries from diry queue even if the processing did not succeed

2009-08-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Method tx_ncstaticfilecache::deleteStaticCacheDirectory() is protected but should be public

2009-08-13  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Current page Id is not outputted in form of backend info module

2009-08-10  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Visualization of tree in backend info module
	* Fixed bug: Visaulization does not depend on selected page of real page branch in backend info module
	* Fixed bug: Markup is incorrect on rendering the table in the backend info module
	* Fixed bug: Expanding/collapsing did not stay at the selected page in the backend info module

2009-08-07  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate possibility to disable static caching for a page branch (tx_ncstaticfilecache.disableCache)

2009-07-21  Oliver Hader  <oliver@typo3.org>

	* Added feature: New hook 'createFile_initializeVariables' to initialize variabled before starting the processing

2009-06-30  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: CLI debug output in processDirtyPages() does not contain directory name
	* Fixed bug: Clearing cached pages (clear_cacheCmd=pages) does not trigger clearing static cache
	* Cleanup: Added methods to determine extension configuration and select specific properties
	* Fixed bug: Processing of dirty pages is shown in info module even if using the dirty flag is not enabled
	* Fixed bug: If necessary, the root of the cache directory should be deleted first

2009-06-23  Daniel Poetzinger  <dev@aoemedia.de>

	* Added feature: Integrate processing instruction for crawler extension

2009-06-23  Oliver Hader  <oliver@typo3.org>
