@@ -8,6 +8,11 @@
 		<languageKey index="default" type="array">
 			<label index="nc_staticfilecache.field">Cache page as static file</label>
 			<label index="moduleFunction.tx_ncstaticfilecache_infomodule">Static file cache</label>
+		        
+			<label index="nc_staticfilecache_task_removeExpiredPages.name">Remove expired pages</label>
+		        <label index="nc_staticfilecache_task_removeExpiredPages.description">All expired pages will be removed from the cache.</label>
+        		<label index="nc_staticfilecache_task_processDirtyPages.name">Process dirty pages</label>
+        		<label index="nc_staticfilecache_task_processDirtyPages.description">Process marked pages to keep the cache up to date.</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="nc_staticfilecache.field">Speichere Seitencache als statische Datei</label>
